@@ -1,3 +1,6 @@
+12 June 2009: Wouter
+	- Fixup potential wrong NSEC picked out of the cache.
+
 11 June 2009: Wouter
 	- Fix queries for type DS when forward or stub zones are there.
 	  They are performed to higherup domains, and thus treated as if
